# codenamer

./: Cargo.toml  Config.toml  Dockerfile  Makefile  build_linux_musl.sh
src/: conf.rs  main.rs  print.rs  random.rs
src/game/: cache.rs  mod.rs
src/res/: words.json  words.rs
src/web/: language.rs  mod.rs  socket.rs
static/css/: base.css
static/js/: base.js
templates/: game.html  index.html
