[package]
name = "codenamer"
version = "0.1.0"
authors = ["Stephan Goeppentin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.8", features = ["with-rocket"] }
config = "0.10"
colored = "1.9"
itertools = "0.9"
lazy_static = "1.4"
rand = "0.7"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json", "serve"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
ws = "0.9"

[dev-dependencies]
test-case = "1.0"